feed-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: feed-service
  template:
    metadata:
      labels:
        app: feed-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8007"
    spec:
      containers:
        - name: feed-service
          image: proudsss/feed-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8007
          env:
            - name: SERVER_PORT
              value: "8007"
            - name: SERVER_SERVLET_CONTEXT_PATH
              value: "/"
            - name: SERVER_FORWARD_HEADERS_STRATEGY
              value: "framework"
            - name: SPRINGDOC_API_DOCS_PATH
              value: "/v3/api-docs"
            - name: SPRINGDOC_SWAGGER_UI_CONFIG_URL
              value: "/api-docs/feed/v3/api-docs/swagger-config"
            - name: SPRINGDOC_SWAGGER_UI_URL
              value: "/api-docs/feed/v3/api-docs"
            - name: SPRING_PROFILES_ACTIVE
              value: "prod"
            - name: SPRING_JPA_OPEN_IN_VIEW
              value: "false"
            - name: SPRING_DATASOURCE_URL
              value: "jdbc:postgresql://85.198.69.217:5432/feed_service"
            - name: SPRING_DATASOURCE_USERNAME
              value: "postgres"
            - name: SPRING_DATASOURCE_PASSWORD
              value: "kdfjfvhdkiojd83"
            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
              value: "update"
            - name: SPRING_DATA_REDIS_HOST
              value: "85.198.69.217"
            - name: SPRING_DATA_REDIS_PORT
              value: "6379"
            - name: SPRING_DATA_REDIS_PASSWORD
              value: "kdfdfjkdfjkR632u"
            - name: RABBIT_HOST
              value: "rabbitmq.default.svc.cluster.local"
            - name: RABBIT_PORT
              value: "5672"
            - name: RABBIT_USER
              value: "admin"
            - name: RABBIT_PASSWORD
              value: "admin"
            - name: AWS_S3_ENDPOINT
              value: "https://s3.ru1.storage.beget.cloud"
            - name: AWS_S3_ACCESS_KEY
              value: "LM2JCURZW9HBM3IR6F8V"
            - name: AWS_S3_SECRET_KEY
              value: "x7cxbCcPWRV2rwjgnPyxmD566Qfe6cqbMZ69gj0F"
            - name: AWS_S3_BUCKET_NAME
              value: "9cdb3a15dcd8-divine-roux"
            - name: AWS_S3_REGION
              value: "ru-central-1"
            - name: SPRING_ELASTICSEARCH_URIS
              value: "http://elasticsearch.default.svc.cluster.local:9200"
            - name: JWT_ACCESS_TOKEN_SECRET
              value: "bDrK+1TuYdVNN5jBKEDQgPXyf6A/74MqHMGkiEp5+i4="
            - name: MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE
              value: "health,prometheus,metrics"
            - name: MANAGEMENT_ENDPOINT_PROMETHEUS_ENABLED
              value: "true"
---
apiVersion: v1
kind: Service
metadata:
  name: feed-service
spec:
  selector:
    app: feed-service
  ports:
    - port: 8007
      targetPort: 8007
      protocol: TCP
