ingress-docs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrshka-ingress-docs
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    # Убедись, что middleware "strip-global-prefix" реально существует
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-global-prefix@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /api-docs/auth
            pathType: Prefix
            backend: { service: { name: auth-service, port: { number: 8000 } } }
          - path: /api-docs/profile
            pathType: Prefix
            backend: { service: { name: profile-service, port: { number: 8001 } } }
          - path: /api-docs/media
            pathType: Prefix
            backend: { service: { name: media-service, port: { number: 8002 } } }
          - path: /api-docs/chat
            pathType: Prefix
            backend: { service: { name: chat-service, port: { number: 8003 } } }
          - path: /api-docs/advert
            pathType: Prefix
            backend: { service: { name: products-service, port: { number: 8005 } } }
          - path: /api-docs/feed
            pathType: Prefix
            backend: { service: { name: feed-service, port: { number: 8007 } } }
          - path: /api-docs/notifications
            pathType: Prefix
            backend: { service: { name: notifications-service, port: { number: 8010 } } }
          - path: /api-docs/oauth
            pathType: Prefix
            backend: { service: { name: oauth-service, port: { number: 8012 } } }
