loki.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: monitoring
spec:
  ports:
    - port: 3100
      targetPort: 3100
  selector:
    app: loki
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:2.8.2
          args:
            - -config.file=/etc/loki/local-config.yaml
            - -ruler.enabled=true
          volumeMounts:
            - name: rules
              mountPath: /etc/loki/rules
          volumes:
            - name: rules
              configMap:
                name: loki-rules
          ports:
            - containerPort: 3100
