rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: auth-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          env:
            - name: RABBIT_URL
              value: "amqp://guest:guest@rabbitmq.default.svc.cluster.local:5672"
            - name: DATABASE_URL
              value: "postgresql://postgres:postgres@155.212.128.52:5432/auth_service?schema=public"
            - name: REDIS_URL
              value: "redis://155.212.128.52:6379"
            - name: PORT
              value: "8000"
            - name: NODE_ENV
              value: "production"
